--- a/app/views/kirokus/index.html.erb
+++ b/app/views/kirokus/index.html.erb
@@ -11,7 +11,7 @@
             <%= link_to "新規登録", new_user_registration_path, class: "post" %>
     <%end%>
 </div>
-
+<%= form_with model: @kiroku,local: true do |f| %>
 <table>
 	<tbody>
 		<tr>
@@ -26,13 +26,14 @@
 			<td>アクシデント</td>
 		</tr>
 		<tr>
+    <% @kirokus.each do |k| %>
 			<td> <% if user_signed_in? %>
-      <%= link_to "登録/編集", root_path, class: "nyuukyosya_name" %>
-      様
+      <%= k.name%>   様<br>
+      <%= link_to "登録/編集", new_kiroku_path, class: "nyuukyosya_name" %>
       <%end%>
       </td>
 			<td>
-      <%#= f.collection_select(:meal_id, Meal.all, :id, :user_id, {}, {class:"genre-select"}) %>
+      朝|<br>
       昼|a<br>
       夕|<br>
       </td>
@@ -46,6 +47,7 @@
 		</tr>
 		<tr>
     	<td> <% if user_signed_in? %>
+       様<br>
       <%= link_to "登録/編集", root_path, class: "nyuukyosya_name" %>
       様
       <%end%>
@@ -60,6 +62,7 @@
 		</tr>
 		<tr>
     <td> <% if user_signed_in? %>
+      <%= k.name %>   様<br>
       <%= link_to "登録/編集", root_path, class: "nyuukyosya_name" %>
       様
       <%end%>
@@ -74,6 +77,7 @@
 		</tr>
 		<tr>
      <td> <% if user_signed_in? %>
+      <%= k.name %>   様<br>
       <%= link_to "登録/編集", root_path, class: "nyuukyosya_name" %>
       様
       <%end%>
@@ -88,6 +92,7 @@
 		</tr>
 		<tr>
 			<td> <% if user_signed_in? %>
+      <%= k.name %>   様<br>
       <%= link_to "登録/編集", root_path, class: "nyuukyosya_name" %>
       様
       <%end%>
@@ -102,6 +107,7 @@
 		</tr>
 		<tr>
 			<td> <% if user_signed_in? %>
+      <%= k.name %>   様<br>
       <%= link_to "登録/編集", root_path, class: "nyuukyosya_name" %>
       様
       <%end%>
@@ -116,6 +122,7 @@
 		</tr>
 		<tr>
 			<td> <% if user_signed_in? %>
+      <%= k.name %>   様<br>
       <%= link_to "登録/編集", root_path, class: "nyuukyosya_name" %>
       様
       <%end%>
@@ -130,6 +137,7 @@
 		</tr>
 		<tr>
 			<td> <% if user_signed_in? %>
+      <%= k.name %>   様<br>
       <%= link_to "登録/編集", root_path, class: "nyuukyosya_name" %>
       様
       <%end%>
@@ -144,6 +152,7 @@
 		</tr>
 		<tr>
 			<td> <% if user_signed_in? %>
+      <%= k.name %>   様<br>
       <%= link_to "登録/編集", root_path, class: "nyuukyosya_name" %>
       様
       <%end%>
@@ -158,6 +167,7 @@
 		</tr>
 		<tr>
 			<td> <% if user_signed_in? %>
+      <%= k.name %>   様<br>
       <%= link_to "登録/編集", root_path, class: "nyuukyosya_name" %>
       様
       <%end%>
@@ -169,6 +179,8 @@
 			<td>良眠</td>
 			<td></td>
 			<td></td>
-		</tr>
-	</tbody>
-</table>
+	  </tr>
+	  </tbody>
+   </table>
+  <%end%>
+ <%end%>
