--- a/app/assets/stylesheets/records.scss
+++ b/app/assets/stylesheets/records.scss
@@ -1,7 +1,6 @@
-// Place all the styles related to the kirokus controller here.
+// Place all the styles related to the records controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-
 table , td, th {
 	border: 1px solid #595959;
 	border-collapse: collapse;
