--- a/app/assets/stylesheets/records.scss
+++ b/app/assets/stylesheets/records.scss
@@ -90,7 +90,7 @@ th {
 }
 
 .name{
-	font-size: 17px;
+	font-size: 19px;
 	font-weight: bold;
 	display: block;
 	margin-top: 5px;
@@ -158,4 +158,14 @@ th {
 
 .diary,.nightdiary,.message,.accidentarea{
 	width: 35%;
+}
+
+.small{
+	font-size: 14px;
+	margin-right: 10px;
+	display: inline-block;
+
+}
+
+.big{
 }
