READ.ME変更、自動デプロイ練習

--- a/app/views/records/index.html.erb
+++ b/app/views/records/index.html.erb
@@ -33,6 +33,7 @@
 			<td>入浴</td>
 			<td>夜間</td>
 			<td>日常</td>
+      <td>夜間記録</td>
 			<td>アクシデント</td>
 		</tr>
 		<tr>
@@ -73,6 +74,8 @@
       </td>
 			<td><span class ="big"><%=record.nightdiary%></span>
       </td>
-		</tr><span class ="big"><%record.accident%></span>
+      <td> <span class ="big"><%record.accident%></span>
+      </td>
+      </tr>
     <%end%>
 	
