新規登録変更

--- a/app/views/records/new.html.erb
+++ b/app/views/records/new.html.erb
@@ -113,8 +113,10 @@
         </div> 
     </div>
 
-
       <%= record.submit "送信する" %>
+      <%= link_to '戻る', root_path%>
+      
+
     <% end %>
   </div>
 </div>
