--- a/app/views/records/edit.html.erb
+++ b/app/views/records/edit.html.erb
@@ -1,7 +1,7 @@
 <%= render partial: 'kaitekikun'%>
 
 <div class="container">
-    <h1 class="maintitle">登録する</h1>
+    <h1 class="maintitle">入力、編集する</h1>
     <%= form_with(model: @record, local: true) do |record| %>
 
 
