--- a/app/views/records/new.html.erb
+++ b/app/views/records/new.html.erb
@@ -1,7 +1,7 @@
 <%= render partial: 'kaitekikun'%>
 
 <div class="container">
-    <h1 class="maintitle">登録する</h1>
+    <h1 class="maintitle">新規登録する</h1>
     <%= form_with(model: @record, local: true) do |record| %>
 
     <%= render 'shared/error_messages', model: record.object %>
