--- a/app/views/records/index.html.erb
+++ b/app/views/records/index.html.erb
@@ -74,7 +74,7 @@
       </td>
 			<td><span class ="big"><%=record.nightdiary%></span>
       </td>
-      <td> <span class ="big"><%record.accident%></span>
+      <td> <span class ="big"><%=record.accident%></span>
       </td>
       </tr>
     <%end%>
