--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,21 +1,23 @@
-<%#= render partial: 'kaitekikun'%>
 <%= render partial: 'records/kaitekikun'%>
-<div class="okuri">申し送り一覧</div>
+
+ <h1 class="maintitle">申し送り一覧</h1>
 
 
   <%# <%= current_user.nameさん  %>
-  
-  <% @records.each do |record| %>
-  <table>
-	  <tbody>
-	  	<tr>
+
+ <div class="inner">
+    <% @records.each do |record| %>
+      <table>
+	    <tbody>
+	    	<tr>
 
       <p><%=record.name%>さん・・・<%= record.message%></p>
-       <%#= link_to "確認、完了後は削除してください", edit_record_path(record.id), method: :delete, , class: "hoge" %>
+     </tr>
+    <tr>
     </tr>
-   <tr>
-  </tr>
+  
+   <% end %>
 
-  <% end %>
 
- <%= link_to '戻る', root_path%>
+   <%= link_to '戻る', root_path%>
+ </div>
