申し送り編集

--- a/app/assets/stylesheets/records.scss
+++ b/app/assets/stylesheets/records.scss
@@ -177,8 +177,11 @@ font-weight: bold;
 }
 
 .okuri{
-// text-align: center;
 font-size: 17px;
 font-weight: bold;
 
+}
+
+.okuriname{
+  border: 1px sold black;
 }
