フォントサイズ変更　調整

--- a/app/assets/stylesheets/records.scss
+++ b/app/assets/stylesheets/records.scss
@@ -58,6 +58,7 @@ table , td, th {
 
 .input_item{
 	background: #eee;
+	font-size: medium;
 }
 
 .input_item td{
@@ -121,6 +122,7 @@ th {
 
 .inputItem{
 	font-weight: bold;
+	font-size: 21px;
 }
 
 .text_area{
