--- a/app/views/records/new.html.erb
+++ b/app/views/records/new.html.erb
@@ -113,7 +113,7 @@
         </div> 
     </div>
 
-      <%= record.submit "送信する" %>
+      <%= record.submit "送信する" %><br>
       <%= link_to '戻る', root_path%>
       
 
