--- a/app/assets/stylesheets/records.scss
+++ b/app/assets/stylesheets/records.scss
@@ -41,14 +41,13 @@ font-weight: bold;
 }
 
 .index_mousiokuri{
-	color: #000;
+	color: white;
 	text-decoration: none;
-	background: #d0d0d0;
+	background: #0000FF;
 	padding: 15px;
 	display: block;
 	text-align: center;
 	border-radius: 5px;
-
 }
 
 table , td, th {
